--- a/_config.yml
+++ b/_config.yml
@@ -2,14 +2,14 @@
 # This file contains configuration flags to customize your site
 #
 
-# Name of your site (displayed in the header)
-name: Your Name
+# Name of site
+name: now-jekyll
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: Blog Backend Developer from Uruguay
 
-# URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+# URL of avatar
+avatar: https://avatars.githubusercontent.com/u/47761214?v=4
 
 #
 # Flags below are optional
@@ -17,19 +17,19 @@ avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/je
 
 # Includes an icon in the footer for each username you enter
 footer-links:
-  dribbble:
-  email:
-  facebook:
-  flickr:
-  github: barryclark/jekyll-now
-  instagram:
-  linkedin:
-  pinterest:
-  rss: # just type anything here for a working RSS icon
-  twitter: jekyllrb
-  stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
-  youtube: # channel/<your_long_string> or user/<user-name>
-  googleplus: # anything in your profile username that comes after plus.google.com/
+#  dribbble:
+  email: nahuelramos28@hotmail.com
+ # facebook:
+ # flickr:
+  github: https://github.com/nicoramos28/now-jekyll
+#  instagram:
+  linkedin: https://www.linkedin.com/in/nicolas-ramos-marset-8872631b7
+#  pinterest:
+#  rss: # just type anything here for a working RSS icon
+#  twitter: jekyllrb
+#  stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
+#  youtube: # channel/<your_long_string> or user/<user-name>
+#  googleplus: # anything in your profile username that comes after plus.google.com/
 
 
 # Enter your Disqus shortname (not your username) to enable commenting on posts
