--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ footer-links:
   email: nahuelramos28@hotmail.com
  # facebook:
  # flickr:
-  github: https://github.com/nicoramos28/now-jekyll
+  github: https://github.com/nicoramos28/nicoramos28.github.io
 #  instagram:
   linkedin: www.linkedin.com/in/nicolas-ramos-marset
 #  pinterest:
